--- a/end2end.html
+++ b/end2end.html
@@ -1,9 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	Massively by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
 		<title>Emma Lofthouse</title>
@@ -53,13 +49,13 @@
                 <section class="posts">    
                 <article>
                   <h2> Start: Land's End <br>(Cornwall)</h2>
-                  <img src="images/LandsEnd.jpg" width="400" height="400" >
+                  <img src="images/LandsEnd.jpg" style="width: 90%;" >
                   </h2>
                   <p><center>18th May 2023 </center> </p>
                 </article>
                 <article>
                   <h2>Finish: Dunnet Head  <br> (Scotland)</h2>
-                  <img src="images/DunnetHead.jpg" width="400" height="400" >
+                  <img src="images/DunnetHead.jpg" style="width: 75%; " >
                   <p><center>6th September 2023 </center> </p>
                 </article>
                 </section>
@@ -70,7 +66,7 @@
                   <strong>Total Number of Steps:</strong> 3.2 million<br>
                   <strong>Time taken:</strong> 112 days<br>
                   <strong>Longest Day:</strong> 37km <br>
-                  <strong> Shortest Day:</strong> 12km </p>
+                  <strong> Shortest Day:</strong> 8km </p>
 
                 </section>
 
