--- a/projects.html
+++ b/projects.html
@@ -1,9 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	Massively by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
 		<title>Emma Lofthouse</title>
@@ -43,26 +39,26 @@
 						<section class="posts">
 							
 							<article>
-								<a href="https://github.com/EmmaKLofthouse/VegVision"><h2>VegVision</h2></a>
-                <a href="https://github.com/EmmaKLofthouse/VegVision"><img src="images/vv.png" width="600"  style="margin-bottom:1cm;"/></a>
+								<a href="https://github.com/EmmaKLofthouse/VegVision"><h2 style="margin-bottom:1em">VegVision</h2></a>
+                <a href="https://github.com/EmmaKLofthouse/VegVision"><img src="images/vv.png" style="width: 90%; margin-bottom: 2em;"/></a>
 								<p>Computer Vision project using Convolutional Neural Networks to identify vegetables   </p>
 							</article>	
 							<article>
 								<a href="https://github.com/EmmaKLofthouse/hiking-trails"><h2>Hiking Duration Predictor
 								</h2></a>
-                <a href="https://github.com/EmmaKLofthouse/hiking-trails"><img src="images/hike_times.png" width="500"/></a>
+                <a href="https://github.com/EmmaKLofthouse/hiking-trails"><img src="images/hike_times.png" style="width: 90%;"/></a>
 								<p>Using tree-based machine learning algorithms to predict the duration of hikes </p>
 							</article>
               <article>
 								<a href="https://github.com/EmmaKLofthouse/Book-Analysis-and-Recommender"><h2> Book Analysis and Recommender</h2>
 								</h2></a>
-                <a href="https://github.com/EmmaKLofthouse/Book-Analysis-and-Recommender"><img src="images/rating_vs_year.png" width=" 500"/></a>
+                <a href="https://github.com/EmmaKLofthouse/Book-Analysis-and-Recommender"><img src="images/rating_vs_year.png" style="width: 90%;"/></a>
 								<p>Exploratory Data Analysis of Goodreads books and Book Recommender using K-Means clustering  </p>
 							</article>
               <article>
-								<a href="https://github.com/EmmaKLofthouse/WEAVE_RF"><h2 style="margin-bottom:2cm;">Detection of Spectral Features 
+								<a href="https://github.com/EmmaKLofthouse/WEAVE_RF"><h2 style="margin-bottom:2em;">Detection of Spectral Features 
 								</h2></a>
-                <img src="images/m_stac3089fig3.jpeg"  style="margin-bottom:1cm;"/>
+                <img src="images/m_stac3089fig3.jpeg"  style="width: 90%; margin-bottom:1em;"/>
 								<a href="https://github.com/EmmaKLofthouse/WEAVE_RF"><p>Automating the identification and classification of features in WEAVE spectra  </p></a>
 							</article>
 
