--- a/index.html
+++ b/index.html
@@ -46,15 +46,17 @@
 
 				<!-- Main -->
 					<div id="main">
-						<!-- Featured Post -->
-						<div class="image-txt-container">
-							<img src="images/me.jpeg" style="width:50%" >
-							<article class="post featured">
 
-								<p>Hi! I'm a data scientist and ex-astrophysicist currently hiking in the UK somewhere between Land's End and John O'Groats! As an astronomer I studied how galaxies grow and evolve across cosmic time using large datasets from the world's most advanced telescopes and employing machine learning techniques to automate the identification of spectral features. </p> 
-							</article>
-							
-						  </div>
+						<div class="intro">
+							<div class="intro-item">
+								<center><img src="images/me.jpeg" style="margin-right: 3em;"></center>
+							</div>
+							<div class="intro-item">
+								<p>Hi! I'm a data scientist and ex-astrophysicist currently hiking in the UK somewhere between Land's End and John O'Groats! As an astronomer I studied how galaxies grow and evolve across cosmic time using large datasets from the world's most advanced telescopes and employing machine learning techniques to automate the identification of spectral features.</p>
+							</div>
+
+						</div>
+
 
 						<div style="border:none">
 							<img src="images/icons.png" style="width:100%;margin-top:-3em; "/>
