--- a/index.html
+++ b/index.html
@@ -52,7 +52,13 @@
 								<center><img src="images/me.jpeg" style="margin-right: 3em;"></center>
 							</div>
 							<div class="intro-item">
-								<p>Hi! I'm a data scientist and ex-astrophysicist currently hiking in the UK somewhere between Land's End and John O'Groats! As an astronomer I studied how galaxies grow and evolve across cosmic time using large datasets from the world's most advanced telescopes and employing machine learning techniques to automate the identification of spectral features.</p>
+								<h2>Welcome	</h2>
+								<ul>
+									<li> I'm a data scientist (and ex-astrophysicist). <br>
+									<li>  I spent Summer 2023 hiking 2200km from one end of the UK to the other!<br>
+									<li>  I love using a variety of techniques including machine learning and data visualization to discover new and exciting results.<br>
+
+								</ul>
 							</div>
 
 						</div>
