--- a/end2end.html
+++ b/end2end.html
@@ -40,7 +40,7 @@
 								<div class="row">
 								<div class="col-12 col-12-small">
 								<h2>Land's End to John O'Groats</h2>
-                <p>In 2023, I undertook a personal challenge to walk the length of the UK. Starting at Land's End in Cornwall, the most south-westerly point and going all the way up to John O'Groats at the far north-east of Scotland. Of course, stopping at The Lizard (southern most point) and Dunnet Head (northern most point) on the way. An amazing experience that I will happy talk about for hours!
+                <p>In 2023, I undertook a personal challenge to walk the length of the UK. Starting at Land's End in Cornwall, the most south-westerly point and going all the way up to John O'Groats at the far north-east of Scotland. Of course, stopping at The Lizard (southern most point) and Dunnet Head (northern most point) on the way. An amazing experience that I will happily talk about for hours!
                 </p>
               </div>
                 </div>
