added map to End2End

--- a/end2end.html
+++ b/end2end.html
@@ -68,7 +68,9 @@
                   <strong>Longest Day:</strong> 37km <br>
                   <strong> Shortest Day:</strong> 8km </p>
 
-                </section>
+									<iframe src="map.html"></iframe>
+								</section>
+
 
 						<!-- Footer -->
             <footer>
