update map sizing

--- a/end2end.html
+++ b/end2end.html
@@ -68,7 +68,10 @@
                   <strong>Longest Day:</strong> 37km <br>
                   <strong> Shortest Day:</strong> 8km </p>
 
-									<iframe src="map.html"></iframe>
+									<div>
+										<iframe src="map.html"></iframe>
+									</div>
+
 								</section>
 
 
