--- a/end2end.html
+++ b/end2end.html
@@ -37,42 +37,45 @@
 
 						<!-- Post -->
 
-								<div class="row">
-								<div class="col-12 col-12-small">
+
+						<section class="posts">
+							<article>
 								<h2>Land's End to John O'Groats</h2>
                 <p>In 2023, I undertook a personal challenge to walk the length of the UK. Starting at Land's End in Cornwall, the most south-westerly point and going all the way up to John O'Groats at the far north-east of Scotland. Of course, stopping at The Lizard (southern most point) and Dunnet Head (northern most point) on the way. An amazing experience that I will happily talk about for hours!
                 </p>
-              </div>
-                </div>
+							</article>
+
+							<article>
+								<h2>My Route</h2>
+								<iframe src="map.html"></iframe>
+
+							</article>
 
 
-                <section class="posts">    
-                <article>
-                  <h2> Start: Land's End <br>(Cornwall)</h2>
-                  <img src="images/LandsEnd.jpg" style="width: 90%;" >
-                  </h2>
-                  <p><center>18th May 2023 </center> </p>
-                </article>
-                <article>
-                  <h2>Finish: Dunnet Head  <br> (Scotland)</h2>
-                  <img src="images/DunnetHead.jpg" style="width: 75%; " >
-                  <p><center>6th September 2023 </center> </p>
-                </article>
-                </section>
+						</section>
 
-                <section>
-                  <h3>Stats</h3>
-                  <p><strong> Distance Walked:</strong> 2195km (1364 miles)<br>
-                  <strong>Total Number of Steps:</strong> 3.2 million<br>
-                  <strong>Time taken:</strong> 112 days<br>
-                  <strong>Longest Day:</strong> 37km <br>
-                  <strong> Shortest Day:</strong> 8km </p>
+						<section class="posts">    
+							<article>
+								<h2> Start: Land's End <br>(Cornwall)</h2>
+								<img src="images/LandsEnd.jpg" style="width: 90%;" >
+								</h2>
+								<p><center>18th May 2023 </center> </p>
+							</article>
+							<article>
+								<h2>Finish: Dunnet Head  <br> (Scotland)</h2>
+								<img src="images/DunnetHead.jpg" style="width: 75%; " >
+								<p><center>6th September 2023 </center> </p>
+							</article>
+						</section>
 
-									<div>
-										<iframe src="map.html"></iframe>
-									</div>
-
-								</section>
+						<section>
+							<h2>Stats</h2>
+							<p><strong> Distance Walked:</strong> 2195km (1364 miles)<br>
+							<strong>Total Number of Steps:</strong> 3.2 million<br>
+							<strong>Time taken:</strong> 112 days<br>
+							<strong>Longest Day:</strong> 37km <br>
+							<strong> Shortest Day:</strong> 8km </p>
+						</section>
 
 
 						<!-- Footer -->
